syntax = "proto3";

package volnix.governance.v1;

option go_package = "github.com/volnix-protocol/volnix-protocol/proto/gen/go/volnix/governance/v1;governancev1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

// ProposalStatus defines the status of a governance proposal
enum ProposalStatus {
  PROPOSAL_STATUS_UNSPECIFIED = 0;
  PROPOSAL_STATUS_SUBMITTED = 1;    // Proposal submitted, waiting for voting
  PROPOSAL_STATUS_VOTING = 2;        // Voting period active
  PROPOSAL_STATUS_PASSED = 3;        // Proposal passed, waiting for timelock
  PROPOSAL_STATUS_EXECUTED = 4;      // Proposal executed
  PROPOSAL_STATUS_REJECTED = 5;      // Proposal rejected
  PROPOSAL_STATUS_EXPIRED = 6;       // Proposal expired
}

// ProposalType defines the type of governance proposal
enum ProposalType {
  PROPOSAL_TYPE_UNSPECIFIED = 0;
  PROPOSAL_TYPE_PARAMETER_CHANGE = 1;  // Change operational parameters
  PROPOSAL_TYPE_TEXT = 2;               // Text proposal (informational)
}

// VoteOption defines the voting options
enum VoteOption {
  VOTE_OPTION_UNSPECIFIED = 0;
  VOTE_OPTION_YES = 1;
  VOTE_OPTION_NO = 2;
  VOTE_OPTION_ABSTAIN = 3;
}

// Proposal represents a governance proposal
message Proposal {
  uint64 proposal_id = 1;
  string proposer = 2;  // bech32 address
  ProposalType proposal_type = 3;
  string title = 4;
  string description = 5;
  ProposalStatus status = 6;
  
  // Voting parameters
  google.protobuf.Timestamp submit_time = 7;
  google.protobuf.Timestamp voting_start_time = 8;
  google.protobuf.Duration voting_period = 9;
  google.protobuf.Timestamp voting_end_time = 10;
  
  // Execution parameters
  google.protobuf.Timestamp execution_time = 11;  // When proposal can be executed (after timelock)
  google.protobuf.Duration timelock_period = 12;  // Period before execution
  
  // Voting results
  string yes_votes = 13;      // Weighted yes votes (WRT amount)
  string no_votes = 14;       // Weighted no votes (WRT amount)
  string abstain_votes = 15;  // Weighted abstain votes (WRT amount)
  string total_votes = 16;    // Total weighted votes
  
  // Proposal content (for parameter changes)
  repeated ParameterChange parameter_changes = 17;
}

// ParameterChange defines a change to an operational parameter
// According to whitepaper: "Ограниченный набор операционных параметров (например, коэффициент MOA, лимит ANT)"
message ParameterChange {
  string module = 1;      // Module name (e.g., "lizenz", "anteil", "consensus")
  string parameter = 2;   // Parameter name
  string old_value = 3;   // Current value
  string new_value = 4;   // Proposed new value
  string description = 5; // Description of the change
}

// Vote represents a vote on a proposal
message Vote {
  uint64 proposal_id = 1;
  string voter = 2;      // bech32 address
  VoteOption option = 3;
  string voting_power = 4; // WRT amount (weight of vote)
  google.protobuf.Timestamp vote_time = 5;
}

// Params defines the parameters for the governance module
message Params {
  // Voting parameters
  google.protobuf.Duration voting_period = 1;        // Duration of voting period
  google.protobuf.Duration timelock_period = 2;      // Period before proposal execution
  string min_deposit = 3;                            // Minimum WRT deposit to create proposal
  string quorum = 4;                                 // Minimum quorum (as decimal, e.g., "0.4" for 40%)
  string threshold = 5;                              // Minimum threshold for passing (as decimal, e.g., "0.5" for 50%)
  
  // Constitutional parameters (immutable, cannot be changed via governance)
  // These are hardcoded in the protocol:
  // - WRT total supply: 21,000,000
  // - WRT halving interval: 210,000 blocks
  // - LZN total supply: fixed, one-time emission
}

